--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,21 @@
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box; }
+
+section {
+  background: #00C6D6;
+  width: 400px;
+  height: 44px;
+  border-bottom: 1px solid #00B4C3;
+  color: #FFFFFF;
+  padding-top: 9px;
+  font-size: 20px;
+  padding-left: 18px;
+  font-weight: 300;
+  letter-spacing: .7px; }
+
+.container {
+  border: 1px solid #00B4C3;
+  width: 400px;
+  margin: auto;
+  margin-top: 200px; }
