--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box; }
 
-section {
+div div {
   background: #00C6D6;
   width: 400px;
   height: 44px;
@@ -15,8 +15,18 @@ section {
   font-weight: 300;
   letter-spacing: .7px; }
 
+.expanded {
+  height: 194px;
+  transition: max-height 1s ease; }
+
+.shrunk {
+  transition: max-height 1s ease;
+  height: 44px;
+  overflow: hidden; }
+
 .container {
   border: 1px solid #00B4C3;
   width: 400px;
-  margin: auto;
-  margin-top: 200px; }
+  height: 283px;
+  margin-left: 200px;
+  margin-top: 100px; }
