--- a/css/style.scss
+++ b/css/style.scss
@@ -20,16 +20,17 @@ div div{
 }
 
 
-
 .expanded {
   height: 194px;
-  transition: max-height 1s ease;
-
+  transition-delay: 0s;
+  transition-property: height;
+  transition-duration: 1s;
 }
 
 .shrunk{
-  transition: max-height 1s ease;
-
+  transition-delay: 0s;
+  transition-property: height;
+  transition-duration: 1s;
   height: 44px;
   overflow: hidden;
 }
