--- a/css/style.scss
+++ b/css/style.scss
@@ -19,6 +19,14 @@ div div{
   letter-spacing: .7px;
 }
 
+article{
+  padding-left: 20px;
+  padding-top: 20px;
+  padding-right: 20px;
+  color: #756C6C;
+  font-size: 14px;
+  font-weight: lighter;
+}
 
 .expanded {
   height: 194px;
