--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,14 @@ div div {
   font-weight: 300;
   letter-spacing: .7px; }
 
+article {
+  padding-left: 20px;
+  padding-top: 20px;
+  padding-right: 20px;
+  color: #756C6C;
+  font-size: 14px;
+  font-weight: lighter; }
+
 .expanded {
   height: 194px;
   transition-delay: 0s;
